Corrigido bugs Adicionado controller no OrderItem para tratar tickets

--- a/public/administracao/acesso.html
+++ b/public/administracao/acesso.html
@@ -57,7 +57,7 @@
 							console.log('Nível de permissão insuficiente');
 
 							setTimeout(function() {
-								window.location.href = '/administracao/sair';
+								window.location.href = '/administracao/sair.html';
 							}, 3000);
 						}
 
