--- a/public/administracao/homologacao.html
+++ b/public/administracao/homologacao.html
@@ -68,7 +68,8 @@
 
 		} else {
 
-			window.location.href = "/administracao/acesso";
+//			window.location.href = "/administracao/acesso";
+
 		}
 
 	</script>
