--- a/public/development/index-commented.html
+++ b/public/development/index-commented.html
@@ -31,15 +31,15 @@
 	} catch(e) {}
 
 </script>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
-<link rel="stylesheet" href="dist/css/tonovaso.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
+<link rel="stylesheet" href="../dist/css/tonovaso.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <body class="tk-proxima-nova">
@@ -280,8 +280,8 @@
 
 </footer>
 
-<script src="dist/js/underscore-min.js"></script>
-<script src="dist/js/tonovaso.js"></script>
+<script src="../dist/js/underscore-min.js"></script>
+<script src="../dist/js/tonovaso.js"></script>
 
 <script>
 
