--- a/public/development/lineup.html
+++ b/public/development/lineup.html
@@ -46,15 +46,15 @@
 	} catch(e) { }
 
 </script>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
-<link rel="stylesheet" href="dist/css/tonovaso.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
+<link rel="stylesheet" href="../dist/css/tonovaso.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <body class="tk-proxima-nova">
@@ -123,7 +123,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/ZOOM%20BOX.png" alt=""/>
+					<img src="../dist/img/artists/ZOOM%20BOX.png" alt=""/>
 
 					<figcaption>
 
@@ -201,7 +201,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/DONA%20BANDA.png" alt=""/>
+					<img src="../dist/img/artists/DONA%20BANDA.png" alt=""/>
 
 					<figcaption>
 
@@ -279,7 +279,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/MC%20GUIME.png" alt=""/>
+					<img src="../dist/img/artists/MC%20GUIME.png" alt=""/>
 
 					<figcaption>
 
@@ -357,7 +357,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/WILL.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/WILL.png" alt=""/>
 
 					<figcaption>
 
@@ -369,7 +369,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/TARU.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/TARU.png" alt=""/>
 
 					<figcaption>
 
@@ -381,7 +381,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/FEL%20MARTINS.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/FEL%20MARTINS.png" alt=""/>
 
 					<figcaption>
 
@@ -393,7 +393,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/QWERTY.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/QWERTY.png" alt=""/>
 
 					<figcaption>
 
@@ -405,7 +405,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/X-ALL.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/X-ALL.png" alt=""/>
 
 					<figcaption>
 
@@ -417,7 +417,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artistsEletronicSunset/MD&MA.png" alt=""/>
+					<img src="../dist/img/artistsEletronicSunset/MD&MA.png" alt=""/>
 
 					<figcaption>
 
@@ -489,7 +489,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/GRUPO%20NOVA%20+%20MC.png" alt=""/>
+					<img src="../dist/img/artists/GRUPO%20NOVA%20+%20MC.png" alt=""/>
 
 					<figcaption>
 
@@ -561,7 +561,7 @@
 
 				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/DJ%20RENATINHO.png" alt=""/>
+					<img src="../dist/img/artists/DJ%20RENATINHO.png" alt=""/>
 
 					<figcaption>
 
@@ -579,8 +579,8 @@
 
 </div>
 
-<script src="dist/js/underscore-min.js"></script>
-<script src="dist/js/tonovaso.js"></script>
+<script src="../dist/js/underscore-min.js"></script>
+<script src="../dist/js/tonovaso.js"></script>
 
 <script>
 
