--- a/public/development/player.html
+++ b/public/development/player.html
@@ -4,14 +4,14 @@
 <title>Vídeo</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <style>
@@ -93,7 +93,7 @@
 <button id="controlstop">Stop</button>
 <button id="controlpower">Power</button>
 
-<script src="dist/js/tonovaso.js"></script>
+<script src="../dist/js/tonovaso.js"></script>
 
 <script>
 
