--- a/public/development/proto-02.html
+++ b/public/development/proto-02.html
@@ -46,15 +46,15 @@
 	} catch(e) {}
 
 </script>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
-<link rel="stylesheet" href="dist/css/tonovaso.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
+<link rel="stylesheet" href="../dist/css/tonovaso.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <body class="tk-proxima-nova">
@@ -144,7 +144,7 @@
 				<p class="TitleLight-gradient text-date">24 a 28 de fevereiro</p>
 			</div>
 
-			<img src="dist/img/logo/TNVLogo.png" alt="Logo TNV"/>
+			<img src="../dist/img/logo/TNVLogo.png" alt="Logo TNV"/>
 
 			<div class="TitleLight">
 				<p class="TitleLight-gradient text-local">Carnaval 2017, Palmital - SP</p>
@@ -214,8 +214,8 @@
 
 </header>
 
-<script src="dist/js/underscore-min.js"></script>
-<script src="dist/js/tonovaso.js"></script>
+<script src="../dist/js/underscore-min.js"></script>
+<script src="../dist/js/tonovaso.js"></script>
 
 <script>
 
