--- a/public/development/social/tickets.html
+++ b/public/development/social/tickets.html
@@ -85,7 +85,7 @@
 
 	<div class="TicketsHeader-inner container">
 
-		<a href="./"><img src="dist/img/logo.png" alt=""/></a>
+		<a href=""><img src="dist/img/logo.png" alt=""/></a>
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
