--- a/public/development/text-gradient.html
+++ b/public/development/text-gradient.html
@@ -30,15 +30,15 @@
 	} catch(e) {}
 
 </script>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
-<link rel="stylesheet" href="dist/css/tonovaso.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
+<link rel="stylesheet" href="../dist/css/tonovaso.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <style>
@@ -48,7 +48,6 @@
 	section.light {
 		color: #d5ac70;
 	}
-
 	@supports (mix-blend-mode: lighten) {
 		section.light .gradient1 {
 			display: inline-block;
@@ -89,7 +88,7 @@
 		justify-content: center;
 		margin: 0;
 		overflow: hidden;
-		padding: 0 0 8em;
+		padding: 8em 0;
 		position: relative;
 		text-align: center;
 	}
@@ -109,6 +108,9 @@
 		opacity: .0225;
 	}
 
+	section {
+	}
+
 	.text {
 		text-transform: uppercase;
 		margin: 0.5em;
@@ -125,9 +127,9 @@
 
 	.logo {
 		max-width: 36em;
-		margin-bottom: 2.25em;
+		margin-bottom: 1.5em;
 	}
-
+	
 </style>
 
 <body class="tk-tenby-four">
@@ -136,55 +138,15 @@
 
 	<div class="background"></div>
 
-	<nav class="Nav" style="margin-bottom: 6em">
-
-		<div class="Nav-background"></div>
-
-		<ul class="Nav-menu">
-
-			<li class="NavItem">
-
-				<a href="/"><span>Início</span></a>
-
-			</li>
-
-			<li class="NavItem">
-
-				<a href="tickets"><span>Ingressos</span></a>
-
-			</li>
-
-			<li class="NavItem">
-
-				<a href="/"><span>20 Anos</span></a>
-
-			</li>
-
-			<li class="NavItem">
-
-				<a href="/"><span>O evento</span></a>
-
-			</li>
-
-			<li class="NavItem">
-
-				<a href="contato"><span>Contato</span></a>
-
-			</li>
-
-		</ul>
-
-	</nav>
-
 	<section class="light">
 		<p class="gradient1 text text-local">Carnaval 2017, Palmital - SP</p>
 	</section>
-	<img class="logo" src="dist/img/logo/TNVLogo.png" alt=""/>
+	<img class="logo" src="../dist/img/logo/TNVLogo.png" alt=""/>
 	<section class="light">
 		<p class="gradient1 text text-date">24 a 28 de fevereiro</p>
 	</section>
 
-	<a href="tickets" class="Button Button--primary" style="margin: 4.5em 0 3em">
+	<a href="tickets" class="Button Button--primary">
 
 		<span>Ingressos</span>
 
