--- a/public/development/tickets-old.html
+++ b/public/development/tickets-old.html
@@ -40,15 +40,15 @@
 	} catch(e) {}
 
 </script>
-<script src="dist/js/villa.min.js"></script>
-<link rel="stylesheet" href="dist/css/villa.min.css"/>
-<link rel="stylesheet" href="dist/css/tonovaso.css"/>
+<script src="../dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="../dist/css/villa.min.css"/>
+<link rel="stylesheet" href="../dist/css/tonovaso.css"/>
 <!--[if lt IE 9]>
-<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-<link rel="stylesheet" type="text/css" href="dist/css/villa-cross.min.css"/>
-<script src="dist/js/html5shiv.js"></script>
-<script src="dist/js/html5shiv-printshiv.js"></script>
-<script src="dist/js/classList.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../dist/css/material-colors.css"/>
+<link rel="stylesheet" type="text/css" href="../dist/css/villa-cross.min.css"/>
+<script src="../dist/js/html5shiv.js"></script>
+<script src="../dist/js/html5shiv-printshiv.js"></script>
+<script src="../dist/js/classList.min.js"></script>
 <![endif]-->
 
 <style>
@@ -205,7 +205,7 @@
 
 	<div class="TicketsHeader-inner container">
 
-		<a href="./"><img src="dist/img/logo/small/TNVLogo.png" alt=""/></a>
+		<a href="../"><img src="../dist/img/logo/small/TNVLogo.png" alt=""/></a>
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
@@ -694,7 +694,7 @@
 	firebase.initializeApp(config);
 </script>
 
-<script src="dist/js/tonovaso.js"></script>
+<script src="../dist/js/tonovaso.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
